Skills working, missing mobile details, effects, mobile menu and header

--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -438,6 +438,10 @@ span.project-link:hover {
     color: $secondary;
     box-shadow: 3px 3px 10px 1px #7EC9F5;
     margin: 5px;
+    font-family: $mainFont;
+    font-weight: lighter;
+    font-size: 20px;
+    font-weight: 300;
     & .logoPill {
         width: 24px;
         // filter: saturate(0);
@@ -463,16 +467,20 @@ span.project-link:hover {
             border-radius: 30px;
             max-width: 800px;
             margin: 30px;
-            background: rgba(255, 255, 255, 0.55);
+            background: rgba(255, 255, 255, 0.75);
             border: 2px solid #FFFFFF;
             box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
             backdrop-filter: blur(20px) brightness(100%);
             border-radius: 30px;
             padding: 2%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
             & .client {
                 background: linear-gradient(270.2deg, #00a1ff 9.69%, #5f79fe 81.09%);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
+                margin-top: 20px;
             }
             & .title {
                 color: $secondary;
@@ -485,11 +493,38 @@ span.project-link:hover {
             & .description {
                 color: $highContrast;
             }
+            & .metaLink {
+                background: linear-gradient(92.81deg, #7EC9F5 20%, #3957ED 80%);
+                padding: 10px 20px;
+                font-weight: 700;
+                color: white;
+                transition: 0.25s;
+                border-radius: 30px;
+                transition: 0.3s ease-in-out;
+                cursor: pointer;
+                display: block;
+                font-family: $mainFont;
+                font-weight: 700;
+                transition: 0.5s ease-in-out;
+                text-align: center;
+                width: 100%;
+                &:hover {
+                    background: linear-gradient(92.81deg, #3957ED 17.54%, #7EC9F5 96.29%);
+                    cursor: pointer;
+                }
+            }
+            & .pill {
+                @extend .pill;
+                height: 30px;
+                padding: 0.25% 5%;
+                font-size: 16px;
+            }
             & .closeModal {
+                flex-direction: row-reverse;
                 position: relative;
                 float: right;
-                margin: 10px 0 30px 0;
-                width: 40px;
+                margin: 0 0 20px 0;
+                width: 20px;
                 transition-duration: 0.5s;
                 -webkit-transition: all 0.5s ease-in-out forwards;
                 -moz-transition: all 0.5s ease-in-out forwards;
