--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -18,6 +18,7 @@ html {
 
 ::-webkit-scrollbar {
     width: 15px;
+    scroll-padding-left: 100px;
 }
 
 
@@ -26,6 +27,7 @@ html {
  ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgb(210, 210, 210);
     border-radius: 10px;
+    scroll-padding-left: 100px;
 }
 
 
@@ -34,6 +36,7 @@ html {
  ::-webkit-scrollbar-thumb {
     background: linear-gradient(92.81deg, #3957ED 17.54%, #7EC9F5 96.29%);
     border-radius: 10px;
+    scroll-padding-left: 10px;
 }
 
 
@@ -187,6 +190,19 @@ nav {
     width: 100%;
 }
 
+.containerCarousel {
+    position: relative;
+    top: -460px;
+    left: 30px;
+}
+
+.serviceCarousel {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+}
+
 .heroBg {
     width: 90%;
     display: block;
@@ -271,14 +287,14 @@ nav {
     &.design {
         background-color: $primary;
         text-shadow: 3px 1px 0 $primary;
-        margin: auto;
+        margin: 20px auto;
         & h2 {
             font-size: 3em;
         }
     }
     &.mkt {
         background-color: $secondary;
-        margin: auto;
+        margin: 20px auto;
         & h2 {
             font-size: 2em;
             text-shadow: 3px 1px 0 $secondary;
@@ -286,7 +302,7 @@ nav {
     }
     &.webDev {
         background-color: $highContrast;
-        margin: auto;
+        margin: 20px auto;
         & h2 {
             font-size: 2em;
             text-shadow: 3px 1px 0 $highContrast;
@@ -294,7 +310,7 @@ nav {
     }
     &.userEx {
         background-color: $lowContrast;
-        margin: auto;
+        margin: 20px auto;
         & h2 {
             font-size: 2em;
             text-shadow: 3px 1px 0 $lowContrast;
@@ -342,6 +358,11 @@ nav {
     backdrop-filter: blur(20px) brightness(100%);
     border-radius: 30px;
     padding: 5%;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
     & .imageContainer {
         position: relative;
         & img {
@@ -362,9 +383,11 @@ nav {
     }
     & .meta {
         padding: 10%;
-        & .h-240 {
-            height: 240px;
-        }
+        height: 100%;
+        display: flex;
+        // & .h-240 {
+        //     height: 240px;
+        // }
     }
     & span {
         font-family: $mainFont;
@@ -596,5 +619,17 @@ span.project-link:hover {
     }
     to {
         transform: rotate(180deg) scale(1.25)
+    }
+}
+
+.contact {
+    background: radial-gradient(91.42% 742.03% at 16.63% 25.09%, #7EC9F5 50%, #0000FF 160%);
+    border-radius: 240px 240px 0px 0px;
+    width: 100vw;
+    & .form {
+        padding: 5% 10%;
+    }
+    & label {
+        color: $primary;
     }
 }
