--- a/scss/_responsive/_responsive.scss
+++ b/scss/_responsive/_responsive.scss
@@ -48,7 +48,7 @@
 }
 
 .justify-content-between {
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .justify-content-evenly {
