--- a/scss/main.css
+++ b/scss/main.css
@@ -8,7 +8,7 @@
     font-weight: 800;
   }
   h2 {
-    font-size: 24px;
+    font-size: 22px;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
   }
@@ -191,6 +191,15 @@ h2.lightTitle {
   color: #3957ED;
 }
 
+.captionSlider {
+  color: #3957ED;
+  font-size: 2rem;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  font-weight: 200;
+  letter-spacing: 0.2rem;
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -208,18 +217,21 @@ html {
 /* width */
 ::-webkit-scrollbar {
   width: 15px;
+  scroll-padding-left: 100px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgb(210, 210, 210);
   border-radius: 10px;
+  scroll-padding-left: 100px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(92.81deg, #3957ED 17.54%, #7EC9F5 96.29%);
   border-radius: 10px;
+  scroll-padding-left: 10px;
 }
 
 /* Handle on hover */
@@ -370,6 +382,19 @@ nav li .lightMode .switch {
   width: 100%;
 }
 
+.containerCarousel {
+  position: relative;
+  top: -460px;
+  left: 30px;
+}
+
+.serviceCarousel {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
+
 .heroBg {
   width: 90%;
   display: block;
@@ -445,14 +470,14 @@ nav li .lightMode .switch {
 .circle.design {
   background-color: #7EC9F5;
   text-shadow: 3px 1px 0 #7EC9F5;
-  margin: auto;
+  margin: 20px auto;
 }
 .circle.design h2 {
   font-size: 3em;
 }
 .circle.mkt {
   background-color: #3957ED;
-  margin: auto;
+  margin: 20px auto;
 }
 .circle.mkt h2 {
   font-size: 2em;
@@ -460,7 +485,7 @@ nav li .lightMode .switch {
 }
 .circle.webDev {
   background-color: #374249;
-  margin: auto;
+  margin: 20px auto;
 }
 .circle.webDev h2 {
   font-size: 2em;
@@ -468,7 +493,7 @@ nav li .lightMode .switch {
 }
 .circle.userEx {
   background-color: #A5AFB6;
-  margin: auto;
+  margin: 20px auto;
 }
 .circle.userEx h2 {
   font-size: 2em;
@@ -512,6 +537,11 @@ nav li .lightMode .switch {
           backdrop-filter: blur(20px) brightness(100%);
   border-radius: 30px;
   padding: 5%;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
 }
 .card .imageContainer {
   position: relative;
@@ -533,9 +563,8 @@ nav li .lightMode .switch {
 }
 .card .meta {
   padding: 10%;
-}
-.card .meta .h-240 {
-  height: 240px;
+  height: 100%;
+  display: flex;
 }
 .card span {
   font-family: "Montserrat", sans-serif;
@@ -768,6 +797,18 @@ span.project-link:hover {
     transform: rotate(180deg) scale(1.25);
   }
 }
+.contact {
+  background: radial-gradient(91.42% 742.03% at 16.63% 25.09%, #7EC9F5 50%, #0000FF 160%);
+  border-radius: 240px 240px 0px 0px;
+  width: 100vw;
+}
+.contact .form {
+  padding: 5% 10%;
+}
+.contact label {
+  color: #7EC9F5;
+}
+
 /* ----------------SPACING---------------- */
 /* PADDING X */
 .padX-1 {
