--- a/scss/_components/_components.scss
+++ b/scss/_components/_components.scss
@@ -98,123 +98,179 @@
                             margin-top: 2%;
                             margin-bottom: 5%;
                             & .menu {
-                                display: flex;
+                                display: none;
                                 flex-direction: column;
                                 width: 100%;
                                 justify-content: space-around;
+                                z-index: 200;
+                                background: linear-gradient(145.12deg, #c5c5fd -25.39%, #a2d6ece0 73.16%);
+                                width: 100vw;
+                                height: 100vh;
+                                top: 0;
+                                bottom: 0;
+                                right: 0;
+                                left: 0;
+                                position: fixed;
+                                justify-content: center;
+                                & li {
+                                    font-size: 2rem;
+                                    text-align: center;
+                                    width: 100%;
+                                    line-height: 1.75em;
+                                    list-style: none;
+                                    font-family: $mainFont;
+                                    & a {
+                                        width: 100%;
+                                        &:visited {
+                                            color: $secondary;
+                                        }
+                                    }
+                                }
+                                & .closeMobileMenu {
+                                    width: 24px;
+                                    margin: 30px auto;
+                                }
+                                & span.switch {
+                                    display: flex;
+                                    margin: 30px auto;
+                                    // &::before {
+                                    //     content: 'Night Mode';
+                                    // }
+                                }
                             }
                         }
                     }
                     
                     @media screen and (min-width:769px) {
+                        .closeMobileMenu {
+                            display: none;
+                        }
                         nav {
                             margin-top: 2%;
                             margin-bottom: 5%;
+                            display: flex;
+                            width: 100%;
+                            flex-direction: row;
+                            justify-content: space-between;
                             & .menu {
                                 display: flex;
                                 flex-direction: row;
                                 width: 100%;
                                 justify-content: space-around;
-                            }
-                        }
-                    }
-                    
-                    nav {
-                        margin-top: 2%;
-                        margin-bottom: 5%;
-                        & ul {
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            max-width: 1024px;
-                            margin: auto;
-                            height: 80px;
-                            align-items: center;
-                            margin-block-start: 0;
-                            margin-block-end: 0;
-                            margin-inline-start: 0;
-                            margin-inline-end: 0;
-                            padding-inline-start: 0;
-                        }
-                        & li {
-                            display: flex;
-                            flex-direction: row;
-                            flex-wrap: nowrap;
-                            list-style-type: none;
-                            font-family: $mainFont;
-                            margin-inline-start: 0;
-                            text-transform: uppercase;
-                            font-weight: 400;
-                            font-size: 20px;
-                            // color: $highContrast;
-                            &:hover {
-                                transition: 0.2s;
-                                color: $secondary;
-                                cursor: pointer;
-                            }
-                            &.active {
-                                transition: 0.15s;
-                                color: $secondary;
-                                font-weight: 900;
-                            }
-                            & .darkMode {
-                                display: flex;
-                                position: relative;
-                                width: 60px;
-                                background-color: $darkMode;
-                                height: 30px;
-                                border-radius: 30px;
-                                border: solid 2px $secondary;
-                                align-items: center;
-                                transition: 0.4s;
-                                & .switch {
-                                    width: 25px;
-                                    height: 25px;
-                                    border-radius: 50%;
-                                    background-color: $primary;
-                                    align-items: center;
-                                    transition: 0.2s ease-in-out;
-                                }
-                                & a {
+                                & ul {
                                     display: flex;
                                     flex-direction: row;
-                                    flex-wrap: nowrap;
-                                }
-                            }
-                            & .lightMode {
-                                display: flex;
-                                position: relative;
-                                width: 60px;
-                                background-color: $primary;
-                                height: 30px;
-                                border-radius: 30px;
-                                border: solid 2px $base;
-                                align-items: center;
-                                transition: 0.4s;
-                                & .switch {
-                                    width: 25px;
-                                    height: 25px;
-                                    border-radius: 50%;
-                                    background-color: $secondary;
+                                    justify-content: space-between;
+                                    flex-wrap: wrap;
+                                    width: 100%;
+                                    max-width: 1024px;
+                                    margin: auto;
+                                    height: 80px;
                                     align-items: center;
-                                    transition: 0.2s ease-in-out;
+                                    margin-block-start: 0;
+                                    margin-block-end: 0;
+                                    margin-inline-start: 0;
+                                    margin-inline-end: 0;
+                                    padding-inline-start: 0;
+                                    & li {
+                                        list-style-type: none;
+                                        font-family: $mainFont;
+                                        margin-inline-start: 0;
+                                        text-transform: uppercase;
+                                        font-weight: 400;
+                                        font-size: 20px;
+                                        // color: $highContrast;
+                                        & a {
+                                            display: flex;
+                                            flex-direction: row;
+                                            flex-wrap: nowrap;
+                                            &:visited {
+                                                color: $secondary;
+                                            }
+                                        }
+                                        &:hover {
+                                            transition: 0.2s;
+                                            color: $secondary;
+                                            cursor: pointer;
+                                        }
+                                        &.active {
+                                            transition: 0.15s;
+                                            color: $secondary;
+                                            font-weight: 900;
+                                        }
+                                        & .darkMode {
+                                            display: flex;
+                                            position: relative;
+                                            width: 60px;
+                                            background-color: $darkMode;
+                                            height: 30px;
+                                            border-radius: 30px;
+                                            border: solid 2px $secondary;
+                                            align-items: center;
+                                            transition: 0.4s;
+                                            & .switch {
+                                                width: 25px;
+                                                height: 25px;
+                                                border-radius: 50%;
+                                                background-color: $primary;
+                                                align-items: center;
+                                                transition: 0.2s ease-in-out;
+                                            }
+                                            & a {
+                                                display: flex;
+                                                flex-direction: row;
+                                                flex-wrap: nowrap;
+                                            }
+                                        }
+                                        & .lightMode {
+                                            display: flex;
+                                            position: relative;
+                                            width: 60px;
+                                            background-color: $primary;
+                                            height: 30px;
+                                            border-radius: 30px;
+                                            border: solid 2px $base;
+                                            align-items: center;
+                                            transition: 0.4s;
+                                            & .switch {
+                                                width: 25px;
+                                                height: 25px;
+                                                border-radius: 50%;
+                                                background-color: $secondary;
+                                                align-items: center;
+                                                transition: 0.2s ease-in-out;
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
                     }
                     
-                    .mobileMenu {
-                        background-image: url(./../../img/mobile-menu.svg);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        width: 60px;
-                        height: 60px;
-                        position: fixed;
-                        top: 40px;
-                        display: flex;
-                        flex-direction: row-reverse;
-                        justify-content: flex-end;
-                        z-index: 200;
+                    @media screen and (max-width:768px) {
+                        .mobileMenu {
+                            background-image: url(./../../img/mobile-menu.svg);
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            width: 60px;
+                            height: 60px;
+                            top: 40px;
+                            display: flex;
+                            flex-direction: row-reverse;
+                            justify-content: flex-end;
+                            z-index: 200;
+                            position: relative;
+                            left: 330px;
+                        }
+                        .menu {
+                            display: none;
+                        }
+                    }
+                    
+                    @media screen and (min-width:769px) {
+                        .mobileMenu {
+                            display: none;
+                        }
                     }
                     
                     @media screen and (max-width:768px) {
@@ -410,7 +466,7 @@
                         width: 100%;
                         border-radius: 30px;
                         max-width: 290px;
-                        background: rgba(255, 255, 255, 0.15);
+                        background: rgba(255, 255, 255, 0.45);
                         border: 2px solid #FFFFFF;
                         box-shadow: 0px 4px 17px 6px rgba(126, 201, 245, 0.4);
                         backdrop-filter: blur(20px) brightness(100%);
@@ -703,9 +759,16 @@
                         }
                     }
                     
+                    .footerContainer {
+                        background-image: url('./../img/contact-circle.png');
+                        background-size: contain;
+                        background-repeat: no-repeat;
+                        background-position: bottom;
+                    }
+                    
                     @media screen and (min-width:300px) {
                         .contact {
-                            background: radial-gradient(91.42% 742.03% at 16.63% 25.09%, #7EC9F5 50%, #0000FF 160%);
+                            background: linear-gradient(149deg, #3957ED 17.54%, #7EC9F5 96.29%);
                             border-radius: 40px 40px 0px 0px;
                             width: 100vw;
                             & .form {
@@ -719,4 +782,22 @@
                                 bottom: -185px;
                             }
                         }
+                    }
+                    
+                    @media screen and (min-width:300px) {
+                        .contact {
+                            border-radius: 140px 140px 0px 0px;
+                            width: 100%;
+                        }
+                    }
+                    
+                    .btn {
+                        background: linear-gradient(92.81deg, #3957ED 17.54%, #7EC9F5 96.29%);
+                        padding: 10px 20px;
+                        font-weight: 700;
+                        color: white;
+                        transition: 0.25s;
+                        border-radius: 30px;
+                        transition: 0.3s ease-in-out;
+                        cursor: pointer;
                     }
