--- a/scss/_fonts/_fonts.scss
+++ b/scss/_fonts/_fonts.scss
@@ -136,7 +136,9 @@ sans-serif;
 // CUSTOM FONTS
 header {
     & h1 {
-        color: $secondary;
+        background: linear-gradient(270.2deg, #00a1ff 9.69%, #5f79fe 81.09%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
     & h4 {
         margin-top: 5%;
@@ -155,9 +157,9 @@ h2 {
     }
 }
 
-#aboutMe {
+#about {
     & h2 {
-        margin-top: 5%;
+        margin-top: 7%;
         text-align: right;
         color: none;
         background: linear-gradient(270.2deg, #00a1ff 9.69%, #5f79fe 81.09%);
@@ -175,22 +177,38 @@ h2 {
 }
 
 @media screen and (max-width:768px) {
-    #aboutMe {
+    #about {
         & h2 {
             font-size: 34px;
         }
     }
 }
 
-.title {
-    background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-weight: 800;
-    text-transform: uppercase;
-    font-size: 64px;
-    &.right {
+@media screen and (min-width:300px) {
+    .title {
         background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 800;
+        text-transform: uppercase;
+        font-size: 52px;
+        &.right {
+            background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
+        }
+    }
+}
+
+@media screen and (min-width:768px) {
+    .title {
+        background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 800;
+        text-transform: uppercase;
+        font-size: 64px;
+        &.right {
+            background: linear-gradient(270.2deg, #7EC9F5 0%, #3957ED 125%);
+        }
     }
 }
 
