--- a/scss/main.css
+++ b/scss/main.css
@@ -390,22 +390,16 @@ header {
     margin: auto;
     height: 80px;
     align-items: center;
-    -webkit-margin-before: 0;
-            margin-block-start: 0;
-    -webkit-margin-after: 0;
-            margin-block-end: 0;
-    -webkit-margin-start: 0;
-            margin-inline-start: 0;
-    -webkit-margin-end: 0;
-            margin-inline-end: 0;
-    -webkit-padding-start: 0;
-            padding-inline-start: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0;
   }
   nav .menu ul li {
     list-style-type: none;
     font-family: "Montserrat", sans-serif;
-    -webkit-margin-start: 0;
-            margin-inline-start: 0;
+    margin-inline-start: 0;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 20px;
@@ -535,13 +529,7 @@ header {
 }
 
 .animationRotate {
-  -webkit-animation: spin 10s ease-in-out infinite;
-          animation: spin 10s ease-in-out infinite;
-}
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
+  animation: spin 10s ease-in-out infinite;
 }
 @keyframes spin {
   100% {
@@ -557,11 +545,11 @@ header {
 }
 
 .arrow {
-  width: 30vw;
+  width: 25vw;
   min-width: 200px;
   position: absolute;
   left: 5%;
-  top: 400px;
+  top: 450px;
 }
 
 @media screen and (max-width: 768px) {
@@ -752,8 +740,7 @@ header {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  -webkit-padding-start: 0;
-          padding-inline-start: 0;
+  padding-inline-start: 0;
   margin: 2% 0 4% 0;
   overflow-x: auto;
 }
@@ -811,6 +798,7 @@ span.project-link:hover {
   font-weight: lighter;
   font-size: 20px;
   font-weight: 300;
+  white-space: nowrap;
 }
 .pill .logoPill, .modalContainer .modalBg .cardMeta .pill .logoPill {
   width: 22px;
@@ -923,15 +911,6 @@ span.project-link:hover {
   border-radius: 20px;
 }
 
-@-webkit-keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(180deg) scale(1.25);
-  }
-}
-
 @keyframes rotate {
   from {
     transform: rotate(0deg);
@@ -994,6 +973,17 @@ span.project-link:hover {
   border-radius: 30px;
   transition: 0.3s ease-in-out;
   cursor: pointer;
+}
+
+.btnDisabled {
+  background: linear-gradient(92.81deg, #afb4d1 17.54%, #dfdfdf 96.29%);
+  padding: 10px 20px;
+  font-weight: 700;
+  color: #A5AFB6;
+  transition: 0.25s;
+  border-radius: 30px;
+  transition: 0.3s ease-in-out;
+  cursor: not-allowed;
 }
 
 /* ----------------SPACING---------------- */
